# evograd

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  claude.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_lamarckian_fix_verification.py  test_lamarckian_parallel.py
.github/workflows/: ci.yml  publish.yml
activations/: __init__.py
configs/: config_regression1D.ini  config_regressionND.ini  config_xor.ini
docs/: index.md
examples/: trial_XOR.py  trial_cartpole.py  trial_gymbase.py  trial_regression.py  trial_regression1D.py  trial_regression1D_grad.py  trial_regressionND.py  trial_regressionND_grad.py  trial_regression_grad.py
examples/XOR/: XOR.ipynb  config_xor.ini  config_xor_notebook.ini
examples/configs/: config_regression1D.ini  config_regressionND.ini  config_xor.ini
examples/gymnasium/: Gymnasium.ipynb  config_gymnasium.ini  trial_cartpole.py  trial_gymbase.py
examples/notebooks/: config_gymnasium.ini  config_regression.ini  config_regression1D Legendre.ini  config_regression1D.ini  config_xor.ini  custom_genome_example.py
examples/regression_1D/: FunctionRegression1D.ipynb  trial_regression1D.py  trial_regression1D_grad.py
examples/regression_ND/: FunctionRegressionND.ipynb  config_regressionND_notebook.ini
genotype/: __init__.py  connection_gene.py  genome.py  innovation_tracker.py  node_gene.py
neat/: __init__.py
neat/activations/: basic_activations.py
neat/genotype/: innovation_tracker.py
neat/phenotype/: __init__.py  individual.py  network_autograd.py  network_fast.py
neat/pool/: population.py  species.py
neat/run/: __init__.py  experiment.py  trial_grad.py
phenotype/: __init__.py  individual.py  network_autograd.py  network_base.py  network_fast.py  network_standard.py
pool/: __init__.py  population.py  species.py  species_manager.py
run/: __init__.py  config.py  experiment.py  trial.py  trial_grad.py
scratchpad/: Function Approximation with MLP.ipynb
scripts/: run_example.py  visualize_network.py
src/evograd/: __init__.py
src/evograd/activations/: __init__.py  basic_activations.py  legendre_activation.py
src/evograd/genotype/: __init__.py  connection_gene.py  genome.py  innovation_tracker.py  node_gene.py
src/evograd/optimization/: __init__.py  bayesian_optimizer.py  search_space.py
src/evograd/phenotype/: __init__.py  individual.py  network_autograd.py  network_base.py  network_fast.py  network_standard.py
src/evograd/pool/: __init__.py  population.py  species.py  species_manager.py
src/evograd/run/: __init__.py  config.py  experiment.py  trial.py  trial_grad.py
src/neat/activations/: __init__.py  basic_activations.py  legendre_activation.py
src/neat/genotype/: __init__.py  connection_gene.py  genome.py  node_gene.py
src/neat/phenotype/: individual.py  network_autograd.py  network_base.py  network_fast.py  network_standard.py
src/neat/pool/: __init__.py  species.py  species_manager.py
src/neat/run/: config.py  trial.py  trial_grad.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_basic_evolution.py  test_config_integration.py
tests/unit/: __init__.py
tests/unit/activations/: test_basic_activations.py  test_legendre_activation.py
(+19 files in other folders)
